--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,6 +334,7 @@ main {
 .avatar-box {
   background: var(--bg-gradient-onyx);
   border-radius: 20px;
+
 }
 
 .info-content .name {
@@ -502,8 +503,109 @@ main {
 }
 
 
+.profile-image-container {
+  margin: 0 auto 20px auto;
+  overflow: hidden;
+}
 
+.profile-image {
+  width: 100%;
+  height: auto;
+  display: block;
+  filter: drop-shadow(1px 1px 20px yellow);
+}
 
+button.btn {
+  padding: 0.8em 1.8em;
+  border: 2px solid #17C3B2;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  transition: 0.3s;
+  z-index: 1;
+  font-family: inherit;
+  color: #17C3B2;
+}
+
+button.btn::before {
+  content: '';
+  width: 0;
+  height: 300%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background: #17C3B2;
+  transition: 0.5s ease;
+  display: block;
+  z-index: -1;
+}
+
+button.btn:hover::before {
+  width: 105%;
+}
+
+button.btn:hover {
+  color: #111;
+}
+.outer {
+  margin: auto;
+  position: relative;
+}
+
+.card {
+  width: 100%;
+  border-radius: 10px;
+  background: radial-gradient(circle 230px at 0% 0%, #ffffff, #0c0d0d);
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease;
+}
+
+.dot {
+  width: 5px;
+  aspect-ratio: 1;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 0 10px #ffffff;
+  border-radius: 100px;
+  z-index: 2;
+  animation: moveDot 6s linear infinite;
+}
+
+@keyframes moveDot {
+  0%, 100% { top: 0; left: 0; }
+  25% { top: 0; left: calc(100% - 5px); }
+  50% { top: calc(100% - 5px); left: calc(100% - 5px); }
+  75% { top: calc(100% - 5px); left: 0; }
+}
+
+.card:hover {
+  transform: rotateY(10deg) rotateX(10deg);
+}
+
+.card img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.ray {
+  width: 220px;
+  height: 45px;
+  border-radius: 100px;
+  position: absolute;
+  background-color: #c7c7c7;
+  opacity: 0.4;
+  box-shadow: 0 0 50px #fff;
+  filter: blur(10px);
+  transform-origin: 10%;
+  top: 0%;
+  left: 0;
+  transform: rotate(40deg);
+}
 
 
 /*-----------------------------------*\
@@ -1105,6 +1207,7 @@ main {
   box-shadow: var(--shadow-4);
   border-radius: 16px;
   z-index: 1;
+  filter: drop-shadow(2px 2px 10px yellow);
 }
 
 .blog-post-item > a::before {
@@ -1893,7 +1996,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { flex-direction: column; }
 
-  .avatar-box img { width: 150px; }
+  .avatar-box img { width: 220px; }
 
   .info-content .name {
     white-space: nowrap;
