--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,8 +157,13 @@ html { font-family: var(--ff-poppins); }
 
 body { background: var(--smoky-black); }
 
+.drop-shadow{
+  filter: drop-shadow(2px 2px 10px yellow);
+}
 
-
+.border-radius{
+  border-radius: 20px;
+}
 
 
 /*-----------------------------------*\
