--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,8 +916,13 @@ button.btn:hover {
 
 .clients-item img {
   width: 100%;
+  height: 120px;
+  object-fit: contain;
   filter: grayscale(1);
   transition: var(--transition-1);
+  background: var(--eerie-black-1);
+  border-radius: 8px;
+  padding: 10px;
 }
 
 .clients-item img:hover { filter: grayscale(0); }
